Fixed a bug where VH was not properly working on iOS Safari/Chrome devices by using react-div-100vh package by github.com/mvasin

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .bigText{
     font-size: 8vw;
 }
@@ -43,13 +45,17 @@
 }
 .main-page{
     padding-inline: 22%;
-    height: 100vh;
+    background-color: whitesmoke;
 }
 
 .aboutme{
     max-width: 50%;
 }
 
+.social-links svg{
+    
+    font-size: 3.5rem;
+}
 
 .experiences{
     
@@ -101,7 +107,7 @@ padding-top: 5rem;
     align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 5rem;
+    padding-top: 2rem;
     
     
 }
@@ -114,7 +120,6 @@ padding-top: 5rem;
 .experiences .body .item{
     background-color: rgb(255, 255, 255);
     width: 45rem;
-    margin-top:5rem;
     border-radius: 5px;
     margin:1rem;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 24%);
@@ -233,6 +238,7 @@ padding-top: 5rem;
     }
 }
 
+/* Landscape compatibility */
 
 @media only screen 
   and (max-device-height: 800px) 
@@ -243,9 +249,6 @@ padding-top: 5rem;
         bottom: 0;
         margin-bottom: 0.8rem;
     }
-
-    
-
   }
 
 
